; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/usb/storage/extr_libusual.c_usb_usual_clear_present.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/usb/storage/extr_libusual.c_usb_usual_clear_present.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.mod_status = type { i32 }

@stat = common dso_local global %struct.mod_status* null, align 8
@usu_lock = common dso_local global i32 0, align 4
@USU_MOD_FL_PRESENT = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @usb_usual_clear_present(i32 %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca %struct.mod_status*, align 8
  %4 = alloca i64, align 8
  store i32 %0, i32* %2, align 4
  %5 = load i32, i32* %2, align 4
  %6 = icmp sle i32 %5, 0
  br i1 %6, label %10, label %7

7:                                                ; preds = %1
  %8 = load i32, i32* %2, align 4
  %9 = icmp sge i32 %8, 3
  br i1 %9, label %10, label %11

10:                                               ; preds = %7, %1
  br label %26

11:                                               ; preds = %7
  %12 = load %struct.mod_status*, %struct.mod_status** @stat, align 8
  %13 = load i32, i32* %2, align 4
  %14 = sext i32 %13 to i64
  %15 = getelementptr inbounds %struct.mod_status, %struct.mod_status* %12, i64 %14
  store %struct.mod_status* %15, %struct.mod_status** %3, align 8
  %16 = load i64, i64* %4, align 8
  %17 = call i32 @spin_lock_irqsave(i32* @usu_lock, i64 %16)
  %18 = load i32, i32* @USU_MOD_FL_PRESENT, align 4
  %19 = xor i32 %18, -1
  %20 = load %struct.mod_status*, %struct.mod_status** %3, align 8
  %21 = getelementptr inbounds %struct.mod_status, %struct.mod_status* %20, i32 0, i32 0
  %22 = load i32, i32* %21, align 4
  %23 = and i32 %22, %19
  store i32 %23, i32* %21, align 4
  %24 = load i64, i64* %4, align 8
  %25 = call i32 @spin_unlock_irqrestore(i32* @usu_lock, i64 %24)
  br label %26

26:                                               ; preds = %11, %10
  ret void
}

declare dso_local i32 @spin_lock_irqsave(i32*, i64) #1

declare dso_local i32 @spin_unlock_irqrestore(i32*, i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
